--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "pixi.js": "^7.2.3",
-    "svg.js": "^2.7.1"
+    "svg.js": "^2.7.1",
+    "tweedle.js": "^2.0.1"
   },
   "devDependencies": {},
   "scripts": {
